--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
-"name": "PetalRush",
-"short_name": "PetalRush",
-"start_url": "/petalrush/",
-"display": "standalone",
-"background_color": "#ffffff",
-"theme_color": "#ff4081",
-"icons": [
-{
-"src": "icon-192.png",
-"sizes": "192x192",
-"type": "image/png"
-},
-{
-"src": "icon-512.png",
-"sizes": "512x512",
-"type": "image/png"
-}
-]
+  "name": "PetalRush Flower Shop",
+  "short_name": "PetalRush",
+  "start_url": "/petalrush/index.html",
+  "scope": "/petalrush/",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#ff4081",
+
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
